[tool.poetry]
name = "metis-fastapi"
version = "0.2.0"
description = ""
authors = ["Shinsuke OTA <ota@rcnp.osaka-u.ac.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.12"
python = "^3.9"
fastapi = "^0.111.0"
uvicorn = "^0.30.1"
redis = "^5.0.7"
numpy = "^2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
